# kubectx-rs

./: .gitignore  Cargo.toml  README.md  cliff.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: alias.rs  completion.rs  fzf.rs  health.rs  kubeconfig.rs  kubens_main.rs  main.rs  printer.rs  shell.rs  state.rs
tests/: integration_test.sh
