[package]
name = "kubectx-rs"
version = "0.1.1"
edition = "2024"
description = "Faster way to switch between clusters and namespaces in kubectl (Rust port)"
license = "Apache-2.0"

[[bin]]
name = "kubectx"
path = "src/main.rs"

[[bin]]
name = "kubens"
path = "src/kubens_main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
colored = "3"
dirs = "6"

[profile.release]
opt-level = 2

[package.metadata.release]
# Distributed via GitHub Releases + a Homebrew tap — NOT published to crates.io.
publish = false
# Tag as v0.2.0 (matches the release.yml `v*` trigger and the Homebrew formula url).
tag-name = "v{{version}}"
pre-release-commit-message = "chore(release): {{version}}"
tag-message = "chore(release): {{version}}"
